# llm_runner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  version.txt
llm_run/: __init__.py  main.py
llm_run/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
llm_run/config/: __init__.py  settings.py
llm_run/engine/: __init__.py  base.py  tensorrt_engine.py
tests/: test_api.py
