[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_run"
version = "0.1.0"
description = "LLM 推理引擎 - 加载 TensorRT engine 并对外提供 OpenAI 兼容 REST API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "llm_run"}]
keywords = ["llm", "tensorrt", "inference", "openai", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
llm-run = "llm_run.main:main"

[project.urls]
Repository = "https://github.com/your-org/llm_run"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_run*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
